@@ -2,6 +2,9 @@
 
 	* src/openglgraphics.cpp: Set color back to current color instead of
 	setting it to white. Fixes white rectangles in equipment window.
+	* src/being.cpp, src/being.h, src/player.cpp: Specify the color in
+	which speech and names are supposed to be drawn. Removed unused
+	mSpeechColor member.
 
 2006-05-12  Björn Steinbrink <B.Steinbrink@gmx.de>
 
@@ -12,7 +15,7 @@
 	* data/graphics/sprites/item1202.png, 
 	data/graphics/sprites/Makefile.am, src/being.cpp, src/being.h,
 	src/localplayer.cpp, src/localplayer.h, src/main.cpp, src/player.cpp,
-	The Mana World: You can now see the shirt when equipping a top 
+	The Mana World: You can now see the shirt when equipping a top
 	equipment.
 
 2006-05-05  Eugenio Favalli  <elvenprogrammer@gmail.com>
